Fix nav width on mobile

--- a/assets/scss/_homepage.scss
+++ b/assets/scss/_homepage.scss
@@ -52,6 +52,8 @@
     @media screen and (max-width: 800px) {
       position: absolute;
       top: 0;
+      left: 0;
+      right: 0;
     }
   }
 
